Update processing data

--- a/GetCoursesFromFSWS.ipynb
+++ b/GetCoursesFromFSWS.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "331cf647-8a52-4ce3-9a85-5d023670ec97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: xmltodict in /home/studio-lab-user/.conda/envs/default/lib/python3.9/site-packages (0.13.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install xmltodict"
    ]
@@ -32,15 +41,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "43388e57-4a04-4141-9741-df75ec083086",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "from requests.auth import HTTPBasicAuth\n",
     "import json\n",
     "import os\n",
+    "import time\n",
+    "\n",
     "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "import urllib.parse\n",
@@ -67,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37e3679d-6d6a-45c7-8da2-b3af5b2eef8a",
    "metadata": {},
    "outputs": [],
@@ -139,62 +161,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e711ada7-d878-4381-8fba-1fdf7b5f48a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "orgs = [\n",
-    "    {\"name\": \"siktai_aho\", \"instnr\": 189},\n",
-    "    {\"name\": \"siktai_ath\", \"instnr\": 255},\n",
-    "    {\"name\": \"siktai_bdm\", \"instnr\": 1526},\n",
-    "    {\"name\": \"siktai_dmmh\", \"instnr\": 253},\n",
-    "    {\"name\": \"siktai_fih\", \"instnr\": 258},\n",
-    "    {\"name\": \"siktai_him\", \"instnr\": 211},\n",
-    "    {\"name\": \"siktai_hinn\", \"instnr\": 209},\n",
-    "    {\"name\": \"siktai_hiø\", \"instnr\": 224},\n",
-    "    {\"name\": \"siktai_hvl\", \"instnr\": 203},\n",
-    "    {\"name\": \"siktai_hvo\", \"instnr\": 223},\n",
-    "    {\"name\": \"siktai_khio\", \"instnr\": 260},\n",
-    "    {\"name\": \"siktai_krus\", \"instnr\": 1661},\n",
-    "    {\"name\": \"siktai_ldh\", \"instnr\": 230},\n",
-    "    {\"name\": \"siktai_mf\", \"instnr\": 190},\n",
-    "    {\"name\": \"siktai_mil\", \"instnr\": 1627},\n",
-    "    {\"name\": \"siktai_nhh\", \"instnr\": 191},\n",
-    "    {\"name\": \"siktai_nih\", \"instnr\": 150},\n",
-    "    {\"name\": \"siktai_nla\", \"instnr\": 254},\n",
-    "    {\"name\": \"siktai_nmbu\", \"instnr\": 192},\n",
-    "    {\"name\": \"siktai_nmh\", \"instnr\": 178},\n",
-    "    {\"name\": \"siktai_nord\", \"instnr\": 204},\n",
-    "    {\"name\": \"siktai_ntnu\", \"instnr\": 194},\n",
-    "    {\"name\": \"siktai_nuc\", \"instnr\": 259},\n",
-    "    {\"name\": \"siktai_oslomet\", \"instnr\": 215},\n",
-    "    {\"name\": \"siktai_phs\", \"instnr\": 233},\n",
-    "    {\"name\": \"siktai_sash\", \"instnr\": 231},\n",
-    "    {\"name\": \"siktai_uia\", \"instnr\": 201},\n",
-    "    {\"name\": \"siktai_uib\", \"instnr\": 184},\n",
-    "    {\"name\": \"siktai_uio\", \"instnr\": 185},\n",
-    "    {\"name\": \"siktai_uis\", \"instnr\": 217},\n",
-    "    {\"name\": \"siktai_uit\", \"instnr\": 186},\n",
-    "    {\"name\": \"siktai_unis\", \"instnr\": 195},\n",
-    "    {\"name\": \"siktai_usn\", \"instnr\": 222},\n",
-    "    {\"name\": \"siktai_vid\", \"instnr\": 251},\n",
-    "]"
+    "    {\"name\": \"siktai_uia\", \"instnr\": 201, \"key\": \"uia\"},\n",
+    "    {\"name\": \"siktai_uib\", \"instnr\": 184, \"key\": \"uib\"},\n",
+    "    {\"name\": \"siktai_uio\", \"instnr\": 185, \"key\": \"uio\"},\n",
+    "    {\"name\": \"siktai_uis\", \"instnr\": 217, \"key\": \"uis\"},\n",
+    "    {\"name\": \"siktai_uit\", \"instnr\": 186, \"key\": \"uit\"},\n",
+    "    {\"name\": \"siktai_nhh\", \"instnr\": 191, \"key\": \"nhh\"},\n",
+    "    {\"name\": \"siktai_nord\", \"instnr\": 204, \"key\": \"nord\"},\n",
+    "    {\"name\": \"siktai_khio\", \"instnr\": 260, \"key\": \"khio\"},\n",
+    "    {\"name\": \"siktai_hvl\", \"instnr\": 203, \"key\": \"hvl\"},\n",
+    "    {\"name\": \"siktai_ntnu\", \"instnr\": 194, \"key\": \"ntnu\"},\n",
+    "    {\"name\": \"siktai_aho\", \"instnr\": 189, \"key\": \"aho\"},\n",
+    "    {\"name\": \"siktai_ath\", \"instnr\": 255, \"key\": \"ath\"},\n",
+    "    {\"name\": \"siktai_bdm\", \"instnr\": 1526, \"key\": \"bdm\"},\n",
+    "    {\"name\": \"siktai_dmmh\", \"instnr\": 253, \"key\": \"dmmh\"},\n",
+    "    {\"name\": \"siktai_fih\", \"instnr\": 258, \"key\": \"fih\"},\n",
+    "    {\"name\": \"siktai_him\", \"instnr\": 211, \"key\": \"him\"},\n",
+    "    {\"name\": \"siktai_hinn\", \"instnr\": 209, \"key\": \"hinn\"},\n",
+    "    {\"name\": \"siktai_hiø\", \"instnr\": 224, \"key\": \"hiø\"},\n",
+    "    {\"name\": \"siktai_hvo\", \"instnr\": 223, \"key\": \"hvo\"},\n",
+    "    {\"name\": \"siktai_krus\", \"instnr\": 1661, \"key\": \"krus\"},\n",
+    "    {\"name\": \"siktai_ldh\", \"instnr\": 230, \"key\": \"ldh\"},\n",
+    "    {\"name\": \"siktai_mf\", \"instnr\": 190, \"key\": \"mf\"},\n",
+    "    {\"name\": \"siktai_mil\", \"instnr\": 1627, \"key\": \"mil\"},\n",
+    "    {\"name\": \"siktai_nih\", \"instnr\": 150, \"key\": \"nih\"},\n",
+    "    {\"name\": \"siktai_nla\", \"instnr\": 254, \"key\": \"nla\"},\n",
+    "    {\"name\": \"siktai_nmbu\", \"instnr\": 192, \"key\": \"nmbu\"},\n",
+    "    {\"name\": \"siktai_nmh\", \"instnr\": 178, \"key\": \"nmh\"},\n",
+    "    {\"name\": \"siktai_nuc\", \"instnr\": 259, \"key\": \"nuc\"},\n",
+    "    {\"name\": \"siktai_oslomet\", \"instnr\": 215, \"key\": \"oslomet\"},\n",
+    "    {\"name\": \"siktai_phs\", \"instnr\": 233, \"key\": \"phs\"},\n",
+    "    {\"name\": \"siktai_sash\", \"instnr\": 231, \"key\": \"sash\"},\n",
+    "    {\"name\": \"siktai_unis\", \"instnr\": 195, \"key\": \"unis\"},\n",
+    "    {\"name\": \"siktai_usn\", \"instnr\": 222, \"key\": \"usn\"},\n",
+    "    {\"name\": \"siktai_vid\", \"instnr\": 251, \"key\": \"vid\"},\n",
+    "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2e26576d-3f13-4b9c-b5db-b9b74ef986e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(orgs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c139df4b-5fbb-4694-90e1-9f0754b1f0d6",
    "metadata": {},
    "outputs": [],
@@ -237,12 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c6af6c32-db01-4841-9dda-5c3742c91b32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getData(username, instnr, aar):\n",
+    "def getData(username, instnr, aar, spraak):\n",
     "    password = os.environ.get(\"FS_PASS\")\n",
     "    auth_details = (username, password)\n",
     "    baseURL = \"https://fsws.usit.no/fsrest/rest/studinfo/emne/\"\n",
@@ -255,7 +288,7 @@
     "        'gruppenr': '-1',\n",
     "        'arstall': aar,\n",
     "        'terminkode': 'STÅR',\n",
-    "        'sprak': 'B', \n",
+    "        'sprak': spraak, \n",
     "        # can be B, N or E\n",
     "    }\n",
     "    response = requests.get(baseURL + \"?\" + urllib.parse.urlencode(query), auth=auth_details)\n",
@@ -275,18 +308,96 @@
    "execution_count": null,
    "id": "e3bd179f-4081-4c16-9f92-0ac3efd60033",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing siktai_uia 201 for 2022 and lang B\n",
+      " Runtime: 31.52934765815735 seconds. Rows received 118\n",
+      "Processing siktai_uia 201 for 2022 and lang N\n",
+      " Runtime: 31.07097601890564 seconds. Rows received 0\n",
+      "Processing siktai_uia 201 for 2022 and lang E\n",
+      " Runtime: 30.85491967201233 seconds. Rows received 94\n",
+      "Processing siktai_uia 201 for 2021 and lang B\n",
+      " Runtime: 30.59570050239563 seconds. Rows received 106\n",
+      "Processing siktai_uia 201 for 2021 and lang N\n",
+      " Runtime: 28.119309425354004 seconds. Rows received 1\n",
+      "Processing siktai_uia 201 for 2021 and lang E\n",
+      " Runtime: 32.258726358413696 seconds. Rows received 94\n",
+      "Processing siktai_uia 201 for 2020 and lang B\n",
+      " Runtime: 47.579331398010254 seconds. Rows received 992\n",
+      "Processing siktai_uia 201 for 2020 and lang N\n",
+      " Runtime: 31.873194217681885 seconds. Rows received 21\n",
+      "Processing siktai_uia 201 for 2020 and lang E\n",
+      " Runtime: 46.91734862327576 seconds. Rows received 907\n",
+      "Processing siktai_uia 201 for 2019 and lang B\n",
+      " Runtime: 34.74870824813843 seconds. Rows received 259\n",
+      "Processing siktai_uia 201 for 2019 and lang N\n",
+      " Runtime: 29.995707511901855 seconds. Rows received 10\n",
+      "Processing siktai_uia 201 for 2019 and lang E\n",
+      " Runtime: 32.08613181114197 seconds. Rows received 235\n",
+      "Processing siktai_uia 201 for 2018 and lang B\n",
+      " Runtime: 38.702959060668945 seconds. Rows received 288\n",
+      "Processing siktai_uia 201 for 2018 and lang N\n",
+      " Runtime: 31.811375856399536 seconds. Rows received 6\n",
+      "Processing siktai_uia 201 for 2018 and lang E\n",
+      " Runtime: 31.528908252716064 seconds. Rows received 259\n",
+      "Processing siktai_uia 201 for 2017 and lang B\n",
+      " Runtime: 35.906434535980225 seconds. Rows received 1396\n",
+      "Processing siktai_uia 201 for 2017 and lang N\n",
+      " Runtime: 20.386966228485107 seconds. Rows received 12\n",
+      "Processing siktai_uia 201 for 2017 and lang E\n",
+      " Runtime: 30.470205307006836 seconds. Rows received 1216\n",
+      "Processing siktai_uia 201 for 2016 and lang B\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
-    "for aar in range(2023, 1980, -1):\n",
-    "    for org in orgs:\n",
-    "        i += 1\n",
-    "        if i >= 50:\n",
-    "            break\n",
-    "        print(f\"Processing {org['name']} {org['instnr']} for {aar}\")\n",
-    "        emner = getData(org['name'], org['instnr'], aar)\n",
-    "        display(emner)"
+    "for org in orgs[0:2]:\n",
+    "    emner = pd.DataFrame()\n",
+    "    try:\n",
+    "        for aar in range(2022, 2015, -1):\n",
+    "            for spraak in [\"B\", \"N\", \"E\"]:\n",
+    "                i += 1\n",
+    "                if i >= 120:\n",
+    "                    break\n",
+    "                start_time = time.time()\n",
+    "                print(f\"Processing {org['name']} {org['instnr']} for {aar} and lang {spraak}\")\n",
+    "                try:\n",
+    "                    nye_emner = getData(org['name'], org['instnr'], aar, spraak)\n",
+    "                    emner = pd.concat([emner, nye_emner], ignore_index=True)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"An exception occurred when processing {org['name']} {org['instnr']} for {aar} and lang {spraak}: {str(e)}\")\n",
+    "                    continue\n",
+    "                runtime = time.time() - start_time\n",
+    "                print(f\" Runtime: {runtime:.1f} seconds. Rows received {len(nye_emner)}\")\n",
+    "                # display(nye_emner)\n",
+    "    except Exception as e:\n",
+    "        print(f\"An exception occurred for organization {org['name']} {org['instnr']}: {str(e)}\")\n",
+    "        continue\n",
+    "    emner.to_parquet(\"data2/\" + org['key'] + \".parquet\")\n",
+    "display(emner)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c1e164f-2b0f-4158-9acb-f84a3a2d59db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a856ddbc-1003-403b-9536-7bfd485bcb90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
